--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "n8n-nodes-<...>",
+  "name": "n8n-nodes-notionmd",
   "version": "0.1.0",
-  "description": "",
+  "description": "n8n node to transform markdown to notion blocks",
   "keywords": [
-    "n8n-community-node-package"
+    "n8n-community-node-package",
+    "markdown",
+    "notion",
+    "markdown-notion"
   ],
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://github.com/minhlucvan/n8n-nodes-notionmd",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "minhlucvan",
+    "email": "luk.mink@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/minhlucvan/n8n-nodes-notionmd.git"
   },
   "main": "index.js",
   "scripts": {
@@ -21,6 +24,7 @@
     "dev": "tsc --watch",
     "format": "prettier nodes credentials --write",
     "lint": "eslint nodes credentials package.json",
+    "test": "jest",
     "lintfix": "eslint nodes credentials package.json --fix",
     "prepublishOnly": "npm run build && npm run lint -c .eslintrc.prepublish.js nodes credentials package.json"
   },
@@ -39,14 +43,23 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.22.5",
+    "@jest/globals": "^29.6.2",
     "@types/express": "^4.17.6",
+    "@types/jest": "^29.5.3",
     "@types/request-promise-native": "~1.0.15",
     "@typescript-eslint/parser": "~5.45",
     "eslint-plugin-n8n-nodes-base": "^1.11.0",
     "gulp": "^4.0.2",
-    "n8n-core": "*",
+    "n8n-core": "^0.161.0",
     "n8n-workflow": "*",
     "prettier": "^2.7.1",
+    "ts-jest": "^29.1.1",
     "typescript": "~4.8.4"
+  },
+  "dependencies": {
+    "@tryfabric/martian": "^1.2.4",
+    "jest": "^29.6.2",
+    "ts-node": "^10.9.1"
   }
 }
